2nd attempt: added default values for inputs to handle cases when the workflow is triggered by a schedule

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     tags:
       - "*"
   schedule:
-    - cron: "30 10 * * 4"
+    - cron: "30 10 * * *"
   workflow_dispatch:
     inputs:
       force:
@@ -31,8 +31,10 @@ jobs:
 
   build:
     needs: initialize
-    uses: aszili/github-actions/.github/workflows/build-docker-image.yml@main    
+    uses: aszili/github-actions/.github/workflows/build-docker-image.yml@main
+    env:
+      FORCE_BUILD: ${{ !!(inputs.force) }}
     with:
       target_tag: ${{ needs.initialize.outputs.TARGET_IMAGE_TAG }}
       build_args: WEBHOOK_VERSION=${{ needs.initialize.outputs.TARGET_IMAGE_TAG }}
-      force: ${{ false || inputs.force}}
+      force: ${{ env.FORCE_BUILD}}
